--- a/11. Functions.html
+++ b/11. Functions.html
@@ -13,12 +13,12 @@
       <div id="page" style="width:auto; padding:30px; margin:10px;">
         <div>
           <div id="main" style="width:auto">
-            <h1>11. <span class="color_h1">Functions</span></h1>
+            <h1>11. <span class="color_h1">함수 (Functions)</span></h1>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="10.%20while%20Loops.html">«
                 Previous</a> <a class="w3-right w3-btn" href="12.%20Arrays.html">Next »</a> </div>
             <hr>
             <p class="intro">PHP 의 진정한 파워는 그 함수들에서 나오며, 1000 개 이상의 내장된 함수를
-              가진다.&nbsp;</p>
+              가진다.&nbsp; (<a href="https://www.w3schools.com/php/php_ref_overview.asp">내장 함수들 Link</a>)</p>
             <hr>
             <h2>PHP User Defined Functions</h2>
             <p>내장된 PHP 함수 이외에 우리 자신의 함수를 만들 수 있다.</p>
