--- a/11. Functions.html
+++ b/11. Functions.html
@@ -180,8 +180,7 @@
             <div class="w3-example">
               <h2 class="example">Example</h2>
               <div class="w3-code notranslate"> &lt;?php<br>
-              declare(strict_types=1); // strict requirement
-              
+              declare(strict_types=1); // strict requirement<br>
                 function addNumbers(float $a, float $b) : float {<br>
                 return $a + $b;<br>
               }<br>
@@ -199,7 +198,7 @@
             <div class="w3-example">
               <h2 class="example">Example</h2>
               <div class="w3-code notranslate"> &lt;?php<br>
-              function add_five(&$value) {
+              function add_five(&$value) {<br>
                   $value += 5;<br>
                 }<br>
                 <br>
