--- a/12. Arrays.html
+++ b/12. Arrays.html
@@ -205,7 +205,7 @@
               </tbody>
             </table>
             <p>위의 표는 다음과 같이 2 차원 배열에 저장할 수 있다.:</p>
-            <div class="code notranslate">
+            <div class="w3-code w3-border notranslate">
               <div> $cars = array<br>
                 &nbsp; (<br>
                 &nbsp; array("Volvo",22,18),<br>
