Update 13. Sorting Arrays.html

--- a/13. Sorting Arrays.html
+++ b/13. Sorting Arrays.html
@@ -13,7 +13,7 @@
       <div id="page" style="width:auto; padding:30px; margin:10px;">
         <div>
           <div id="main" style="width:auto">
-            <h1>13. <span class="color_h1">Sorting Arrays</span></h1>
+            <h1>13. <span class="color_h1">배열 정렬(Sorting Arrays)</span></h1>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="12.%20Arrays.html">«
                 Previous</a> <a class="w3-right w3-btn" href="14.%20Global%20Variables%20-%20Superglobals.html">Next  »</a> </div>
             
