Update 13. Sorting Arrays.html

--- a/13. Sorting Arrays.html
+++ b/13. Sorting Arrays.html
@@ -26,11 +26,11 @@
             <ul>
               <li>sort() - 배열을 오름차순(ascending order)으로 정렬</li>
               <li>rsort() - 배열을 내림차순(descending order)으로 정렬</li>
-              <li>asort() - associative 배열을 오름차순으로 정렬<strong></strong>,
+              <li>asort() - 연관 배열을 오름차순으로 정렬<strong></strong>,
                 값(value)에 따라</li>
-              <li>ksort() - associative 배열을 오름차순으로 정렬, 키(key)에 따라</li>
-              <li>arsort() - associative 배열을 내림차순으로 정렬, 값(value)에 따라</li>
-              <li>krsort() - associative 배열을 내림차순으로 정렬, 키(key)에 따라</li>
+              <li>ksort() - 연관 배열을 오름차순으로 정렬, 키(key)에 따라</li>
+              <li>arsort() - 연관 배열을 내림차순으로 정렬, 값(value)에 따라</li>
+              <li>krsort() - 연관 배열을 내림차순으로 정렬, 키(key)에 따라</li>
             </ul>
             <hr>
             <h2>오름차순(Ascending Order)으로 배열 정렬 - sort()</h2>
