--- a/14. Global Variables - Superglobals.html
+++ b/14. Global Variables - Superglobals.html
@@ -81,7 +81,7 @@
                 echo $_SERVER['SCRIPT_NAME'];<br>
                 ?&gt; </div>
               <br>
-              <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=demo_global_server">Run
+              <a target="_blank" class="w3-btn w3-margin-bottom" href="https://tryphp.w3schools.com/showphp.php?filename=demo_global_server">Run
                 example »</a> </div>
             <p>다음의 표는 $_SERVER 안에 올 수 있는 가장 중요한 요소들 목록입니다.:</p>
             <table class="w3-table-all  notranslate">
@@ -227,15 +227,21 @@
                 &lt;/form&gt;<br>
                 <br>
                 &lt;?php <br>
-                $name = $_REQUEST['fname']; <br>
-                echo $name; <br>
+                if ($_SERVER["REQUEST_METHOD"] == "POST") { <br>
+                  // collect value of input field <br>
+                  $name = $_REQUEST['fname']; <br>
+                  if (empty($name)) { <br>
+                    echo "Name is empty"; <br>
+                  } else { <br>
+                    echo $name; <br>
+                  } <br>
+                } <br>
                 ?&gt;<br>
                 <br>
                 &lt;/body&gt;<br>
                 &lt;/html&gt;</div>
               <br>
-              <a class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_global_request"
-
+              <a class="w3-btn w3-margin-bottom" href="https://tryphp.w3schools.com/showphp.php?filename=demo_global_request"
                 target="_blank">Run example »</a> </div>
             <br>
             <hr>
