Update 16. Form Validation.html

--- a/16. Form Validation.html
+++ b/16. Form Validation.html
@@ -17,8 +17,7 @@
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="15.%20Form%20Handling.html">«
                 Previous</a> <a class="w3-right w3-btn" href="17.%20Forms%20Required%20Fields.html">Next  »</a> </div>
             <hr>
-            <p class="intro">This and the next chapters show how to use PHP to
-              validate form data.</p>
+            <p class="intro">이 장과 다음 장에서는 PHP를 사용하여 양식 데이터의 유효성을 검사하는 방법을 보여줍니다.</p>
             <hr>
             <h2>PHP Form Validation</h2>
             <div class="w3-panel w3-note">
