Update 14. Global Variables - Superglobals.html

--- a/14. Global Variables - Superglobals.html
+++ b/14. Global Variables - Superglobals.html
@@ -231,9 +231,9 @@
                   // collect value of input field <br>
                   $name = $_REQUEST['fname']; <br>
                   if (empty($name)) { <br>
-                    echo "Name is empty"; <br>
+                  &nbsp;&nbsp;&nbsp;  echo "Name is empty"; <br>
                   } else { <br>
-                    echo $name; <br>
+                  &nbsp;&nbsp;&nbsp;   echo $name; <br>
                   } <br>
                 } <br>
                 ?&gt;<br>
@@ -269,9 +269,9 @@
                   // collect value of input field <br>
                   $name = $_POST['fname']; <br>
                   if (empty($name)) { <br>
-                    echo "Name is empty"; <br>
+                  &nbsp;&nbsp;&nbsp;  echo "Name is empty"; <br>
                   } else { <br>
-                    echo $name; <br>
+                  &nbsp;&nbsp;&nbsp;  echo $name; <br>
                   } <br>
                 } <br>
                 ?&gt;<br>
