--- a/17. Forms Required Fields.html
+++ b/17. Forms Required Fields.html
@@ -15,7 +15,7 @@
           <div id="main" style="width:auto">
             <h1>17. <span class="color_h1">Forms - 필수 Fields</span></h1>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="16.%20Form%20Validation.html">«
-                Previous</a> <a class="w3-right w3-btn" href="18.%20Forms%20Validate%20E-mail%20and%20URL.html">Next  »</a> </div>
+                Previous</a> <a class="w3-right w3-btn" href="18.%20Regular%20Expression.html">Next  »</a> </div>
             <hr>
             <p class="intro">이 장에서는 필수 입력 필드 만들기와 필요시 오류 메시지를 만드는 방법을 보여줍니다.</p>
             <hr>
@@ -139,7 +139,7 @@
               유효한 URL을 담고 있는가?".</p>
             <br>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="16.%20Form%20Validation.html">«
-                Previous</a> <a class="w3-right w3-btn" href="18.%20Forms%20Validate%20E-mail%20and%20URL.html">Next  »</a> </div>
+                Previous</a> <a class="w3-right w3-btn" href="18.%20Regular%20Expression.html">Next  »</a> </div>
             <hr> </div>
         </div>
       </div>
