--- a/18. Regular Expression.html
+++ b/18. Regular Expression.html
@@ -24,7 +24,7 @@
 			<p>	정규 표현식을 사용하여 모든 유형의 텍스트 검색 및 텍스트 바꾸기 작업을 수행 할 수 있습니다. </p>
             <hr>
             <h2>문법(Syntax)</h2>
-            <p> PHP에서 정규 표현식은 구분 기호, 패턴 및 선택적 수정자로 구성된 문자열입니다.</p>
+            <p> PHP에서 정규 표현식은 구분자 기호, 패턴 및 선택적 수정자로 구성된 문자열입니다.</p>
             <div class="w3-code  w3-border notranslate">
               <div> $exp = "/w3schools/i"; </div>
             </div>
@@ -34,7 +34,7 @@
 
 
             <h2>정규 표현식 함수</h2>
-            <p>PHP는 정규 표현식을 사용할 수 있는 다양한 함수를 제공합니다. preg_match (), preg_match_all () 및 preg_replace () 함수는 가장 일반적으로 사용되는 함수 중 일부입니다.</p>
+            <p>PHP는 정규 표현식을 사용할 수 있는 다양한 함수를 제공합니다. preg_match(), preg_match_all() 및 preg_replace() 함수는 가장 일반적으로 사용되는 함수 중 일부입니다.</p>
             <table class="w3-table-all  notranslate">
               <tbody>
                 <tr>
@@ -57,7 +57,7 @@
               </table>
             <hr>
 
-            <h2>preg_match () 사용</h2>
+            <h2>preg_match() 사용</h2>
             <p> preg_match()함수는 문자열에 패턴과 일치하는지 부분이 있는지 여부를 알려줍니다.</p>
 
             <div class="w3-example">
