--- a/18. Regular Expression.html
+++ b/18. Regular Expression.html
@@ -157,12 +157,12 @@
             <hr>
 
 
-            <h2>정규 표현식 매타문자(Meta Character)</h2>
+            <h2>정규 표현식 메타문자(Meta Character)</h2>
             <p>메타 문자는 특별한 의미를 갖는 문자입니다.</p>
             <table class="w3-table-all  notranslate">
               <tbody>
                 <tr>
-                  <th style="width:20%">매타문자</th>
+                  <th style="width:20%">메타문자</th>
                   <th >설명</th>
                 </tr>
                 <tr>
