--- a/19. Forms Validate E-mail and URL.html
+++ b/19. Forms Validate E-mail and URL.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
-    <title>18. Forms - Validate E-mail and URL</title>
+    <title>19. Forms - Validate E-mail and URL</title>
     <style>a.menu_html_intro{font-weight:bold;}</style>
     <meta name="viewport" content="width=device-width">
     <meta name="Keywords" content="HTML,PHP,SQL,tutorial,programming,development,Web building,Webmaster">
@@ -14,8 +14,8 @@
         <div>
           <div id="main" style="width:auto">
             <h1>18. <span class="color_h1">Forms - Validate E-mail and URL</span></h1>
-            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="17.%20Forms%20Required%20Fields.html">«
-                Previous</a> <a class="w3-right w3-btn" href="19.%20Date%20and%20Time.html">Next »</a> </div>
+            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="18.%20Regular%20Expression.html">«
+                Previous</a> <a class="w3-right w3-btn" href="20.%20Date%20and%20Time.html">Next »</a> </div>
             <hr>
             <p class="intro">이 장은 이름, 이메일, 그리고 URL의 유효성 검사하는 방법을 보여준다.</p>
             <hr>
@@ -183,8 +183,8 @@
                 target="_blank">Run example »</a> </div>
             <br>
             <br>
-            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="17.%20Forms%20Required%20Fields.html">«
-                Previous</a> <a class="w3-right w3-btn" href="19.%20Date%20and%20Time.html">Next »</a> </div>
+            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="18.%20Regular%20Expression.html">«
+                Previous</a> <a class="w3-right w3-btn" href="20.%20Date%20and%20Time.html">Next »</a> </div>
             <hr> </div>
         </div>
       </div>
