--- a/22. File.html
+++ b/22. File.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
-    <title>21. File Handling - Open/Read/Close</title>
+    <title>22. File Handling - Open/Read/Close</title>
     <style>a.menu_html_intro{font-weight:bold;}</style>
     <meta name="viewport" content="width=device-width">
     <meta name="Keywords" content="HTML,PHP,SQL,tutorial,programming,development,Web building,Webmaster">
@@ -13,10 +13,10 @@
       <div id="page" style="width:auto; padding:30px; margin:10px;">
         <div>
           <div id="main" style="width:auto">
-            <h1>21. <span class="color_h1">File Handling </span><span class="color_h1">-
+            <h1>22. <span class="color_h1">File Handling </span><span class="color_h1">-
                 Open/Read/Close</span></h1>
-            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="20.%20include%20and%20require.htm">«
-                Previous</a> <a class="w3-right w3-btn" href="22.%20File%20Create%20Write.html">Next »</a> </div>
+            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="21.%20include%20and%20require.html">«
+                Previous</a> <a class="w3-right w3-btn" href="23.%20File%20Create%20Write.html">Next »</a> </div>
             <hr>
             <p class="intro">파일 처리는 웹 응용프로그램의 중요한 부분입니다. 우리는 종종 다른 작업을 위해서 파일을
               열고 처리해야 할 필요가 있습니다.</p>
@@ -226,8 +226,8 @@
                 example »</a> </div>
             <p><b>Note:</b>&nbsp; fgetc() 함수가 호출 된 후에는, 파일 포인터(file pointer)는 다음
               문자로 이동된다</p>
-            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="20.%20include%20and%20require.htm">«
-                Previous</a> <a class="w3-right w3-btn" href="22.%20File%20Create%20Write.html">Next »</a> </div>
+            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="21.%20include%20and%20require.html">«
+                Previous</a> <a class="w3-right w3-btn" href="23.%20File%20Create%20Write.html">Next »</a> </div>
             <hr></div>
         </div>
       </div>
