--- a/23. File Create Write.html
+++ b/23. File Create Write.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
-    <title>22. File Create/Write</title>
+    <title>23. File Create/Write</title>
     <style>a.menu_html_intro{font-weight:bold;}</style>
     <meta name="viewport" content="width=device-width">
     <meta name="Keywords" content="HTML,PHP,SQL,tutorial,programming,development,Web building,Webmaster">
@@ -13,9 +13,9 @@
       <div id="page" style="width:auto; padding:30px; margin:10px;">
         <div>
           <div id="main" style="width:auto">
-            <h1>22. <span class="color_h1">File Create/Write</span></h1>
-            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="21.%20File%20Open%20Read%20Close.html">«
-                Previous</a> <a class="w3-right w3-btn" href="23.%20File%20Upload.html">Next »</a> </div>
+            <h1>23. <span class="color_h1">File Create/Write</span></h1>
+            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="22.%20File.html">«
+                Previous</a> <a class="w3-right w3-btn" href="24.%20File%20Upload.html">Next »</a> </div>
             <hr>
             <p class="intro">이 장에서는 서버에 파일을 생성하고 쓰는 방법을 설명한다.&nbsp;</p>
             <hr>
@@ -136,8 +136,8 @@
               </tbody>
             </table>
             <br>
-            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="21.%20File%20Open%20Read%20Close.html">«
-                Previous</a> <a class="w3-right w3-btn" href="23.%20File%20Upload.html">Next »</a> </div>
+            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="22.%20File.html">«
+                Previous</a> <a class="w3-right w3-btn" href="24.%20File%20Upload.html">Next »</a> </div>
             <hr> </div>
         </div>
       </div>
