--- a/20. Date and Time.html
+++ b/20. Date and Time.html
@@ -45,12 +45,11 @@
             </table>
             <br>
             <div class="w3-panel w3-note">
-              <p>&nbsp;timestamp 는 특정 이벤트가 발생한 <strong>날짜/시간</strong>을 나타내는 <strong>문
-                  자 시퀀스</strong>이다. </p>
+              <p>&nbsp;timestamp 는 특정 이벤트가 발생한 <strong>날짜/시간</strong>을 나타내는 <strong>문자 시퀀스</strong>이다. </p>
             </div>
             <br>
             <hr>
-            <h2>간단한 Date 얻기</h2>
+            <h2>Date 얻기</h2>
             <p>date() 함수의 필수인 포멧(<i>format)</i> 파라메타는 날짜(또는 시간)를 어떤 형식으로 나타내는지
               명시한다.&nbsp;</p>
             <p>일반적으로 날짜에 사용되는 일부 문자는 다음과 같습니다.:</p>
@@ -88,7 +87,7 @@
                 example »</a> </div>
             <br>
             <hr>
-            <h2><strong>간단한 시간 얻기</strong></h2>
+            <h2><strong>시간 얻기</strong></h2>
             <p>시간에 일반적으로 사용되는 일부 문자들은 다음과 같다:</p>
             <ul>
               <li><strong>h</strong> - 0 으로 시작하는 <strong>12-hour format 시간</strong>
@@ -132,7 +131,7 @@
                 example »</a> </div>
             <br>
             <hr>
-            <h2>PHP mktime()로 Date 생성</h2>
+            <h2>mktime()로 Date 생성</h2>
             <p>date() 함수의 선택적인(optional) <i>timestamp</i> 파라메타는 timestamp를
               지정한다.&nbsp; timestamp를 지정하지 않으면, 현재 날짜와 시간이 사용된다 (위의 예와 같이).</p>
             <p>mktime() 함수는 날짜의 Unix timestamp 를 반환한다.&nbsp; Unix timestamp 는
@@ -154,7 +153,7 @@
                 example »</a> </div>
             <br>
             <hr>
-            <h2>PHP strtotime()으로 String 으로부터 날짜 생성</h2>
+            <h2>strtotime()으로 String 으로부터 날짜 생성</h2>
             <p>PHP strtotime() 함수는 사람이 인식할 수 있는 문자열을 Unix time으로 변환하는데 사용된다.</p>
             <h3>Syntax</h3>
             <div class="code notranslate">
