--- a/20. Date and Time.html
+++ b/20. Date and Time.html
@@ -138,7 +138,7 @@
               Unix Epoch (January 1 1970 00:00:00 GMT) 와 지정한 시간 사이의 초(seconds)의
               수를 포함한다.&nbsp;</p>
             <h3>Syntax</h3>
-            <div class="code notranslate">
+            <div class="w3-code w3-border   notranslate">
               <div> mktime(<em>hour,minute,second,month,day,year</em>) </div>
             </div>
             <p>아래의 예제에서는 mktime() 함수에서 여러 매개변수로 날짜와 시간을 생성한다. :</p>
@@ -156,7 +156,7 @@
             <h2>strtotime()으로 String 으로부터 날짜 생성</h2>
             <p>PHP strtotime() 함수는 사람이 인식할 수 있는 문자열을 Unix time으로 변환하는데 사용된다.</p>
             <h3>Syntax</h3>
-            <div class="code notranslate">
+            <div class="w3-code w3-border   notranslate">
               <div> strtotime(<em>time,now</em>)</div>
             </div>
             <p>아래의 예는&nbsp; <strong>strtotime()</strong> 함수로 날짜외 시간을 생성한다.:</p>
