Update 23. File Create Write.html

--- a/23. File Create Write.html
+++ b/23. File Create Write.html
@@ -23,20 +23,19 @@
             <p>fopen() 함수가 파일을 생성하는데 사용됩니다. 약간은 혼란 스러울 수 있지만, PHP 에서는 파일을 열 때
               사용하는 함수와 동일한 함수를 사용하여 파일을 생성합니다.</p>
             <p>존재 하지 않는 파일에 fopen() 를 사용하면, 그 파일을 생성하여 쓰거나(writing (w))
-              추가(appending (a))가 가능하도록 해 줍니다.&nbsp;</p>
+              추가(appending (a))가 가능하도록 해줍니다.&nbsp;</p>
             <p>아래의 예제는 "testfile.txt"라고 하는 새로운 파일을 생성합니다. 이 파일은 PHP 코드가 있는 곳과 같은
               디렉토리에 생성됩니다.: </p>
             <div class="w3-example">
               <h2 class="example">Example</h2>
-              <div class="w3-code notranslate"> $myfile = fopen("testfile.txt",
-                "w") </div>
+              <div class="w3-code notranslate"> $myfile = fopen("testfile.txt", "w") </div>
               <br>
             </div>
             <br>
             <hr>
             <h2>PHP File 권한(Permissions)</h2>
             <p>이 코드를 실행하려 할 때 에러가 발생하면, 하드 드라이브에 정보를 기록하는 권한을 PHP&nbsp; 파일에 부여
-              했는지를 확입합니다.&nbsp;</p>
+              했는 지를 확인합니다.&nbsp;</p>
             <hr>
             <h2>PHP Write to File - fwrite()</h2>
             <p>fwrite() 함수는 파일에 기록하는데 사용됩니다.</p>
