--- a/22. File.html
+++ b/22. File.html
@@ -154,7 +154,7 @@
             <h2>PHP Close File - fclose()</h2>
             <p><strong>fclose() </strong>함수는 열린 파일을 닫는데 사용된다. </p>
             <div class="w3-panel w3-note">
-              <p>&nbsp;모든 파알은 사용 완료 후에 닫는 것이 좋은 습관이다. 당신은 서버에 열린 파일이 자원을 차지하는 것을
+              <p>&nbsp;모든 파일은 사용 완료 후에 닫는 것이 좋은 습관이다. 당신은 서버에 열린 파일이 자원을 차지하는 것을
                 원하지 않을 것입니다!</p>
             </div>
             <p>fclose() 는 닫고자 하는 파일의 이름을(또는 파일이름을 담고있는 변수를) 요구합니다:</p>
@@ -168,8 +168,7 @@
             <br>
             <hr>
             <h2>PHP Read Single Line - fgets()</h2>
-            <p><strong>fgets() </strong>함수는 파일로부터 <strong>한 줄을 읽는데 사용</strong>됩
-              니다. </p>
+            <p><strong>fgets() </strong>함수는 파일로부터 <strong>한 줄을 읽는데 사용</strong>됩니다. </p>
             <p>아래의 예는 "webdictionary.txt" 파일의 첫 번째 줄을 출력합니다:</p>
             <div class="w3-example">
               <h2 class="example">Example</h2>
@@ -182,8 +181,7 @@
               <br>
               <a target="_blank" class="w3-btn w3-margin-bottom" href="https://tryphp.w3schools.com/showphp.php?filename=demo_file_fgets">Run
                 example »</a> </div>
-            <p><b>Note:</b> fgets() 함수가 호출 된 후, 파일 포인터(file pointer)는 다음 줄로 이동
-              합니다.</p>
+            <p><b>Note:</b> fgets() 함수가 호출 된 후, 파일 포인터(file pointer)는 다음 줄로 이동합니다.</p>
             <hr>
             <h2>PHP Check End-Of-File - feof()</h2>
             <p><strong>feof() </strong>함수는 <strong>"end-of-file"(EOF)에 도달 했는지를
