Update 24. File Upload.html

--- a/24. File Upload.html
+++ b/24. File Upload.html
@@ -17,7 +17,8 @@
                         <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="23.%20File%20Create%20Write.html">«
                 Previous</a> <a class="w3-right w3-btn" href="25.%20Cookies.html">Next  »</a> </div>
             <hr>
-            <p class="intro">PHP 를 사용해서 파일을 서버에 업로드하는 것이 가능하다.</p>
+            <p class="intro">PHP를 사용하면 서버에 파일을 쉽게 업로드 할 수 있습니다. 
+              그러나 쉬움과 함께 위험이 따르므로 파일 업로드를 허용 할 때는 항상 주의하십시오!</p>
             <hr>
             <h2>Create an Upload-File Form</h2>
             <p>사용자들이 폼으로 파일을 업로드 할수 있도록 하는 것은 매우 유용할 수 있습니다.&nbsp; </p>
