Update 23. File Create Write.html

--- a/23. File Create Write.html
+++ b/23. File Create Write.html
@@ -39,8 +39,8 @@
             <hr>
             <h2>PHP Write to File - fwrite()</h2>
             <p>fwrite() 함수는 파일에 기록하는데 사용됩니다.</p>
-            <p>fwrite() 의 첫번째 파라메타는 쓸 <strong>파일 이름</strong>을, 두 번째 파라메타는 쓸 <strong>문
-                자열</strong> 입니다.&nbsp; </p>
+            <p>fwrite() 의 첫번째 파라메타는 쓸 <strong>파일 이름</strong>을, 두 번째 파라메타는 쓸 
+              <strong>문자열</strong> 입니다.&nbsp; </p>
             <p>아래의 예제는 "newfile.txt" 라고 부르는 새로운 파일에 이름 몇 개를 씁니다.&nbsp; :</p>
             <div class="w3-example">
               <h2 class="example">Example</h2>
