Update 23. File Create Write.html

--- a/23. File Create Write.html
+++ b/23. File Create Write.html
@@ -94,6 +94,10 @@
             <p>For a complete reference of filesystem functions, go to our
               complete <a href="http://www.w3schools.com/PHP/php_ref_filesystem.asp">PHP
                 Filesystem Reference</a>.</p>
+            <ul>
+              <li> basename </li>
+              <li> file_exists </li>
+             </li>
             <br>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="22.%20File.html">«
                 Previous</a> <a class="w3-right w3-btn" href="24.%20File%20Upload.html">Next »</a> </div>
