--- a/24. File Upload.html
+++ b/24. File Upload.html
@@ -92,6 +92,15 @@
                 }<br>
                 ?&gt; </div>
             </div>
+            <p> PHP 스크립트 설명 : </p>
+             <ul>
+               <li> $target_dir="uploads/" - 파일이 배치 될 디렉토리를 지정합니다. </li>
+               <li> $target_file 은 업로드 할 파일의 경로를 지정합니다. </li>
+               <li> $uploadOk = 1은 아직 사용되지 않았습니다 (나중에 사용됨). </li>
+               <li> $imageFileType 은 파일의 파일 확장자를 보유합니다 (소문자). </li>
+               <li> 다음에는 이미지 파일이 실제 이미지인지 가짜 이미지인지 확인하십시오. </li>
+            </ul>
+            </p>
             <p>전역 PHP $_FILES 배열을 사용하여, 클라이언트 컴퓨터로부터 원격 서버에 파일을 업로드 할 수
               있습니다.&nbsp;</p>
             <p>첫 번째 파라메터는 폼의 input name 이며, 두 번째 인덱스는 "name", "type", "size",
