--- a/24. File Upload.html
+++ b/24. File Upload.html
@@ -115,6 +115,10 @@
               <li>$_FILES["file"]["error"] - the error code resulting from the
                 file upload</li>
             </ul>
+          
+          <p> 참고 : "upload.php"파일이 있는 디렉토리에 "uploads"라는 새 디렉토리를 만들어야 합니다. 
+            업로드 된 파일이 거기에 저장됩니다.</p>
+          
             <p>이것은 파일을 업로드하는 간단한 방법입니다. 보안상의 이유로 어떤 사용자가 업로드할 수 있는지를 제한하는 것을 추가
               해야 합니다. </p>
             <hr>
