--- a/24. File Upload.html
+++ b/24. File Upload.html
@@ -56,14 +56,14 @@
                 $imageFileType = strtolower(pathinfo($target_file,PATHINFO_EXTENSION));<br>
                 // Check if image file is a actual image or fake image<br>
                 if(isset($_POST["submit"])) {<br>
-                  $check = getimagesize($_FILES["fileToUpload"]["tmp_name"]);<br>
-                  if($check !== false) {<br>
-                    echo "File is an image - " . $check["mime"] . ".";<br>
-                    $uploadOk = 1;<br>
-                  } else {<br>
-                    echo "File is not an image.";<br>
-                    $uploadOk = 0;<br>
-                  }<br>
+                &nbsp;&nbsp;$check = getimagesize($_FILES["fileToUpload"]["tmp_name"]);<br>
+                &nbsp;&nbsp;if($check !== false) {<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;echo "File is an image - " . $check["mime"] . ".";<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;$uploadOk = 1;<br>
+                &nbsp;&nbsp;} else {<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;echo "File is not an image.";<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;$uploadOk = 0;<br>
+                &nbsp;&nbsp;}<br>
                 }<br>
                 <br>
                 if (isset($_FILES)) {<br>
