--- a/23. File Create Write.html
+++ b/23. File Create Write.html
@@ -97,6 +97,7 @@
             <ul>
               <li> basename() </li>
               <li> file_exists() </li>
+              <li> pathinfo() </li>
              </li>
             <br>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="22.%20File.html">«
