Update 23. File Create Write.html

--- a/23. File Create Write.html
+++ b/23. File Create Write.html
@@ -95,9 +95,9 @@
               complete <a href="http://www.w3schools.com/PHP/php_ref_filesystem.asp">PHP
                 Filesystem Reference</a>.</p>
             <ul>
-              <li> basename() </li>
-              <li> file_exists() </li>
-              <li> pathinfo() </li>
+              <li> <a href="https://www.w3schools.com/PHP/func_filesystem_basename.asp">basename()</a> </li>
+              <li> <a href="https://www.w3schools.com/PHP/func_filesystem_file_exists.asp">file_exists()</a> </li>
+              <li> <a href="https://www.w3schools.com/PHP/func_filesystem_pathinfo.asp">pathinfo()</a> </li>
              </li>
             <br>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="22.%20File.html">«
