Update 15. Form Handling.html

--- a/15. Form Handling.html
+++ b/15. Form Handling.html
@@ -97,7 +97,7 @@
                 생각하시오!</strong>
               <p>&nbsp;이 페이지는 어떤 유효성 검사도 갖고 있지 않고, 단지 어떻게 폼 데이타를 보내고 받는지를 보여준다.</p>
               <p>&nbsp;그러나, 다음 페이지는 보안을 염두에 두고 PHP 폼을 처리하는 방법을 보여준다. 폼 데이타의 적절한
-                유효성 검사는 해커와 스팸으로부터 양식을 보호하는데 중요한다 !</p>
+                유효성 검사는 해커와 스팸으로부터 양식을 보호하는데 중요하다 !</p>
               </div>
             <br>
             <hr>
@@ -111,12 +111,12 @@
             <p>$_POST 는 HTTP POST 방법을 통해서 현재 스크립트에 전달된 변수의 배열이다.&nbsp;</p>
             <hr>
             <h2>GET를 사용하는 경우?</h2>
-            <p><strong>GET 방식</strong>으로 폼에서 전달되는 정보는 <strong>모든 사람에게 보여집니다</strong>(모
-              든 변수 이름과 값들이 URL에 표시됩니다.). <br>
+            <p><strong>GET 방식</strong>으로 폼에서 전달되는 정보는 <strong>모든 사람에게 보여집니다</strong>(모든 변수
+              이름과 값들이 URL에 표시됩니다.). <br>
               GET 는 또한 보낼 수 있는 정보의 양에 제한이 있습니다. 그 한계는 약 2000 문자 정도이다. <br>
               그러나, 변수들이&nbsp;URL에 표시됨으로, 그 페이지의 <strong>북마크가 가능</strong>하며, 어떤
               경우에는 <strong>이것이 유용</strong>하다.&nbsp;</p>
-            <p>GET 는 중요하지 않은 자료를 보내는데 유용할 것 이다.&nbsp;</p>
+            <p>GET 는 중요하지 않은 자료를 보내는데 유용할 것이다.&nbsp;</p>
             <p><b>Note:</b> GET 는 <strong>암호나 민감한 정보를 보내는 데는 사용해서는 안된다</strong>!</p>
             <hr>
             <h2>POST를 사용하는 경우?</h2>
@@ -126,8 +126,8 @@
               input)에 대한 지원과 같은 고급 기능도 지원합니다.&nbsp;</p>
             <p>그러나, 변수가 URL에 표시되지 않으므로, 페이지 <strong>북마크가 불가능하다</strong>.&nbsp;
             </p>
-            <div class="w3-panel w3-note"><strong>&nbsp;개발자들은 폼 자료를 보내는데 </strong><strong><strong>POST&nbsp;
-                  </strong>를 선호한다.</strong></div>
+            <div class="w3-panel w3-note"><strong>&nbsp;개발자들은 폼 자료를 보내는데 </strong><strong><strong>POST</strong>를 
+              선호한다.</strong></div>
             <br>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="14.%20Global%20Variables%20-%20Superglobals.html">«
                 Previous</a> <a class="w3-right w3-btn" href="16.%20Form%20Validation.html">Next  »</a> </div>
