--- a/17. Forms Required Fields.html
+++ b/17. Forms Required Fields.html
@@ -21,7 +21,7 @@
             <hr>
             <h2>PHP - Required Fields</h2>
             <p>이전 페이지의 유효성 검사 규칙 표에서, "Name", "E-mail", 과 "Gender" 필드들이 필요함을
-              보았다. 이러한 필드들은 비위둘 수 없으며&nbsp; HTML&nbsp; 폼에서 반드시 작성되어야 합니다.&nbsp;</p>
+              보았다. 이러한 필드들은 비워둘 수 없으며&nbsp; HTML&nbsp; 폼에서 반드시 작성되어야 합니다.&nbsp;</p>
             <table class="w3-table-all notranslate ">
               <tbody>
                 <tr>
@@ -55,7 +55,7 @@
             <p>다음 코드에서는 새로운 변수들 $nameErr, $emailErr, $genderErr,과&nbsp;
               $websiteErr 를 추가한다. 이 에러 변수들은 필수 필드들에 대한 에러 메시지를 갖게 된다. 우리는 또한
               각&nbsp; $_POST 변수에 대하여&nbsp; if else 문을 추가한다. 이는 $_POST 변수가 비어있는지를
-              확인한다 (PHP empty() 함수로). 만약 비어 있다면, 에러 메시지가 해당 에러 변수에 저장되며, 비어 있지
+              확인한다 (PHP <b><a href="https://www.w3schools.com/php/func_var_empty.asp">empty()</a></b> 함수로). 만약 비어 있다면, 에러 메시지가 해당 에러 변수에 저장되며, 비어 있지
               않다면, 사용자 입력 데이터를 test_input() 함수로 보낸다.:</p>
             <div class="w3-code w3-border notranslate">
               <div> &lt;?php<br>
