Update 19. Forms Validate E-mail and URL.html

--- a/19. Forms Validate E-mail and URL.html
+++ b/19. Forms Validate E-mail and URL.html
@@ -31,13 +31,13 @@
             </div>
             <br>
             <div class="w3-panel w3-note"> <strong><br>
-                &nbsp;<a href="http://kr1.php.net/manual/en/function.preg-match.php">preg_match()</a>
+                &nbsp;<a href="https://www.w3schools.com/php/func_regex_preg_match.asp" target="blank">preg_match()</a>
                 함수는 문자열에서 패턴을 검색하여 존재하면&nbsp; </strong><strong><strong>true</strong>를,
                 그렇지 않으면 </strong><strong><strong>false </strong>를 반환한다.&nbsp;
                 <br>
                 <br>
-                &nbsp;이때 페턴은 <a target="_top" href="Regular%20expression.html">regular
-                  expression</a> (regex) 으로 주어지며, 사이트 <a href="http://rubular.com/">Rubular</a></strong>
+                &nbsp;이때 패턴은 <a target="_top" href="https://junji64.github.io/php/18.%20Regular%20Expression.html" target="blank">regular
+                  expression</a> (regex) 으로 주어지며, 사이트 <a href="http://rubular.com/"  target="blank">Rubular</a></strong>
               에서 시험 할 수 있습니다.<br>
               <br>
             </div>
