--- a/24. File Upload.html
+++ b/24. File Upload.html
@@ -199,6 +199,9 @@
             </div>
             <br>
             <hr>
+            <h2>완전한 PHP 파일 시스템 참조</h2>
+          <p>파일 시스템 함수에 대한 전체 참조는 <a href="https://www.w3schools.com/php/php_ref_filesystem.asp">Complete PHP File System 참조</a>를 참조하십시오 . </p>
+          <hr>
           
             <h2>(Option) Saving the Uploaded File</h2>
             <p>위의 예제는 서버의 PHP temp 폴더에 업로드된 파일들의 임시 복사본을 생성합니다. </p>
