--- a/24. File Upload.html
+++ b/24. File Upload.html
@@ -26,12 +26,11 @@
               <div> &lt;html&gt;<br>
                 &lt;body&gt;<br>
                 <br>
-                &lt;form action="upload_file.php" method="post"
-                enctype="multipart/form-data"&gt;<br>
-                &lt;label for="file"&gt;Filename:&lt;/label&gt;<br>
-                &lt;input type="file" name="file" id="file"&gt;&lt;br&gt;<br>
-                &lt;input type="submit" name="submit" value="Submit"&gt;<br>
-                &lt;/form&gt;<br>
+                <form action="upload.php" method="post" enctype="multipart/form-data"> <br>
+                  Select image to upload:<br>
+                  <input type="file" name="fileToUpload" id="fileToUpload"><br>
+                  <input type="submit" value="Upload Image" name="submit"><br>
+                </form><br>
                 <br>
                 &lt;/body&gt;<br>
                 &lt;/html&gt; </div>
