Update 24. File Upload.html

--- a/24. File Upload.html
+++ b/24. File Upload.html
@@ -26,11 +26,11 @@
               <div> &lt;html&gt;<br>
                 &lt;body&gt;<br>
                 <br>
-                <form action="upload.php" method="post" enctype="multipart/form-data"> <br>
+                  &lt;form action="upload.php" method="post" enctype="multipart/form-data"&gt; <br>
                   Select image to upload:<br>
-                  <input type="file" name="fileToUpload" id="fileToUpload"><br>
-                  <input type="submit" value="Upload Image" name="submit"><br>
-                </form><br>
+                   &lt;input type="file" name="fileToUpload" id="fileToUpload"&gt;<br>
+                    &lt;input type="submit" value="Upload Image" name="submit"&gt;<br>
+                  &lt;/form&gt;<br>
                 <br>
                 &lt;/body&gt;<br>
                 &lt;/html&gt; </div>
