Update 24. File Upload.html

--- a/24. File Upload.html
+++ b/24. File Upload.html
@@ -39,7 +39,7 @@
             <ul>
               <li>Form 에 method="post"를 사용하는지 확인하십시오.</li>
               <li>Form 에는 enctype="multipart/form-data" 속성도 필요합니다. 양식을 제출할 때 사용할 콘텐츠 유형을 지정합니다. </li>
-              <li>&lt;input&gt; 태그의 type="file"속성은 입력 컨트롤 옆에 "찾아보기" 버튼이 있는, 파일 선택 컨트롤로 입력 필드를 표시합니다. </li>
+              <li>&lt;input&gt; 태그의 type="file"속성은 입력 컨트롤 옆에 "파일 선택" 버튼이 있는 입력 필드를 표시합니다. </li>
             </ul>
             <p><b>Note:</b> 사용자가 파일을 업로드 하도록 허용하는 것은 큰 보안 위험이 따른다. 신뢰할 수 있는
               사용자에게만 파일 업로드를 허용하십시요.<br>
