Update Ex-4. PHP Login add new user.html

--- a/Ex-4. PHP Login add new user.html
+++ b/Ex-4. PHP Login add new user.html
@@ -10,6 +10,8 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" type="text/css" href="http://www.w3schools.com/stdtheme.css">
+        <link rel="stylesheet" href="w3.css">
+
   </head>
   <body>
     <div id="belowTopnav" style="width:auto">
@@ -107,7 +109,7 @@
               </div>
             </div>
             <br>
-            아래의 코드(content.php)는 login.php 로부터 user 의 name 을 전달 받아 페이지를 생성니다 . <br>
+            아래의 코드(content.php)는 login.php 로부터 user 의 name 을 전달 받아 페이지를 생성합니다 . <br>
             <br>
             <div class="w3-code notranslate">
               <div> &lt;html&gt;<br>
