Update Ex-5. PHP Login Session.html

--- a/Ex-5. PHP Login Session.html
+++ b/Ex-5. PHP Login Session.html
@@ -10,6 +10,8 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" type="text/css" href="http://www.w3schools.com/stdtheme.css">
+        <link rel="stylesheet" href="w3.css">
+
   </head>
   <body>
     <div id="belowTopnav" style="width:auto">
@@ -180,7 +182,7 @@
                 Out&lt;/b&gt;&lt;/a&gt;";<br>
                 ?&gt;</div>
             </div>
-            <p>아래의 코드(logout.php)는&nbsp; logout 에 사용되며, 다시 login.php 파일을 브라우징한다.
+            <p>아래의 코드(logout.php)는&nbsp; logout 에 사용되며, 다시 login.php 파일을 브라우징 합니다.
             </p>
             <div class="w3-code notranslate">
               <div> &lt;?php<br>
