--- a/25. Cookies.html
+++ b/25. Cookies.html
@@ -17,12 +17,10 @@
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="24.%20File%20Upload.html">«
                 Previous</a> <a class="w3-right w3-btn" href="26.%20Sessions.html">Next »</a> </div>
             <hr>
-            <p class="intro">cookie 는 사용자를 식별하는데 종종 사용된다. </p>
-            <hr>
             <h2>What is a Cookie? </h2>
-            <p>cookie 는 사용자를 식별하는데 종종 사용된다. cookie 는 서버가 사용자 컴퓨터에 내장하는 작은 파일입니다.
-              같은 컴퓨터가 브라우져로 페이지를 요청할 때마다, cookie 도 함께 보냅니다.&nbsp; PHP 로 cookie 를
-              생성하고 그 값을 가져올 수 있습니다.</p>
+            <p>cookie 는 종종 사용자를 식별하는 데 사용됩니다. cookie 서버가 사용자의 컴퓨터에 삽입하는 작은 파일입니다.
+              같은 컴퓨터가 브라우져로 페이지를 요청할 때마다, cookie 도 전송됩니다. 
+              PHP를 사용하면 쿠키 값을 만들고 검색 할 수 있습니다. </p>
             <p><img class="decoded" alt="http://courses.cs.washington.edu/courses/cse154/14sp/lectures/slides/images/cookie_exchange.png"
 
                 src="http://courses.cs.washington.edu/courses/cse154/14sp/lectures/slides/images/cookie_exchange.png"></p>
