--- a/27. Filter.html
+++ b/27. Filter.html
@@ -18,11 +18,11 @@
                 Previous</a> <a class="w3-right w3-btn" href="index.html">Next  »</a> </div>
             <hr>
             <p class="intro">데이터 유효성 검사 = 데이터가 올바른 형식인지 확인합니다. </p>
-            <p class="intro">데이터 삭제 = 데이터에서 잘못된 문자를 제거합니다.</p>
+            <p class="intro">데이터 살균(Sanitizing) = 데이터에서 잘못된 문자를 제거합니다.</p>
             
             <hr>
             <h2>PHP 필터 확장</h2>
-            <p>PHP 필터는 외부 입력을 확인하고 삭제하는 데 사용됩니다. </p>
+            <p>PHP 필터는 외부 입력을 유효성 확인하고 살균하는 데 사용됩니다. </p>
             <p>PHP 필터 확장에는 사용자 입력을 확인하는 데 필요한 많은 기능이 있으며 
               데이터 유효성 검사를 더 쉽고 빠르게 할 수 있도록 설계되었습니다.</p>
             <p>filter_list()함수는 PHP 필터 확장이 제공하는 것을 나열하는 데 사용할 수 있습니다. </p>
@@ -43,7 +43,7 @@
                 &lt;/table&gt;<br>
                </div>
               <br>
-              <a target="_blank" class="w3-btn w3-margin-bottom" href="https://tryphp.w3schools.com/showphp.php?filename=tryphp_filter1">Run
+              <a target="_blank" class="w3-btn w3-margin-bottom" href="https://www.w3schools.com/php/phptryit.asp?filename=tryphp_filter1">Run
                 example »</a> </div>
             
             <hr>
