--- a/27. Filter.html
+++ b/27. Filter.html
@@ -80,7 +80,7 @@
               <h2 class="example">Example</h2>
               <div class="w3-code notranslate"> 
                 &lt;?php<br>
-                $str = "<h1>Hello World!&lt;/h1&gt;";<br>
+                $str = "&lt;h1&gt;Hello World!&lt;/h1&gt;";<br>
                 $newstr = filter_var($str, FILTER_SANITIZE_STRING);<br>
                 echo $newstr;<br>
                 ?&gt; <br>
