--- a/25. Cookies.html
+++ b/25. Cookies.html
@@ -17,17 +17,18 @@
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="24.%20File%20Upload.html">«
                 Previous</a> <a class="w3-right w3-btn" href="26.%20Sessions.html">Next »</a> </div>
             <hr>
-            <h2>What is a Cookie? </h2>
-            <p>cookie 는 종종 사용자를 식별하는 데 사용됩니다. cookie 서버가 사용자의 컴퓨터에 삽입하는 작은 파일입니다.
-              같은 컴퓨터가 브라우져로 페이지를 요청할 때마다, cookie 도 전송됩니다. 
+            <h2> 쿠키(Cookie)란 무엇인가? </h2>
+            <p> 쿠키는 종종 사용자를 식별하는 데 사용됩니다. 
+              쿠키는 서버가 사용자의 컴퓨터에 삽입하는 작은 파일입니다.
+              같은 컴퓨터가 브라우져로 페이지를 요청할 때마다, 쿠키도 함께 전송됩니다. 
               PHP를 사용하면 쿠키 값을 만들고 검색 할 수 있습니다. </p>
             <p><img class="decoded" alt="http://courses.cs.washington.edu/courses/cse154/14sp/lectures/slides/images/cookie_exchange.png"
 
                 src="http://courses.cs.washington.edu/courses/cse154/14sp/lectures/slides/images/cookie_exchange.png"></p>
             <hr>
 
-            <h2>How to Create a Cookie?</h2>
-            <p>setcookie() 함수는 cookie를 설정하는데 사용됩니다.</p>
+            <h2> 쿠키 생성 방법</h2>
+            <p>setcookie() 함수는 쿠키를 설정하는데 사용됩니다.</p>
             <p><b>Note:</b> setcookie() 함수는<strong> &lt;html&gt; 태그 앞에</strong>
               와야 합니다. </p>
             <h3>Syntax</h3>
@@ -47,7 +48,7 @@
                 &lt;?php<br>
                 $cookie_name = "user"; <br>
                 $cookie_value = "John Doe"; <br>
-                setcookie($cookie_name, $cookie_value, time() + (86400 * 30), "/"); // 86400 = 1 day
+                setcookie($cookie_name, $cookie_value, time() + (86400 * 30), "/"); // 86400 = 1 day <br>
                 ?&gt;  <br>
                 &lt;html&gt;  <br>
                 &lt;body&gt;  <br>
