--- a/25. Cookies.html
+++ b/25. Cookies.html
@@ -62,7 +62,7 @@
                 } <br>
                 ?&gt; 
                  <br>
-                &lt;/body&gt;
+                &lt;/body&gt;<br>
                 &lt;/html&gt;
                 </div>
               <br>
@@ -77,9 +77,9 @@
               <h2 class="example">Example</h2>
               <div class="w3-code notranslate"> 
                 &lt;?php<br>
-                $cookie_name = "user";
-                $cookie_value = "Alex Porter";
-                setcookie($cookie_name, $cookie_value, time() + (86400 * 30), "/");
+                $cookie_name = "user";<br>
+                $cookie_value = "Alex Porter";<br>
+                setcookie($cookie_name, $cookie_value, time() + (86400 * 30), "/");<br>
                 ?&gt;  <br>
                 &lt;html&gt;  <br>
                 &lt;body&gt;  <br>
@@ -118,7 +118,7 @@
                 echo "Cookie 'user' is deleted.";<br>
                 ?&gt; 
                  <br>
-                &lt;/body&gt;
+                &lt;/body&gt;<br>
                 &lt;/html&gt;
                 </div>
               <br>
@@ -147,164 +147,19 @@
                 }<br>
                 ?&gt; 
                  <br>
-                &lt;/body&gt;
+                &lt;/body&gt;<br>
                 &lt;/html&gt;
                 </div>
               <br>
               <a target="_blank" class="w3-btn w3-margin-bottom" href="https://tryphp.w3schools.com/showphp.php?filename=demo_cookie5">Run
                 example »</a> </div>
             
-            <h3>Example 1</h3>
-            <p>아래의 예에서, 우리는 "user" 라는 이름의 쿠키를 생성하고, 그것에 "Alex Porter" 라는 값을
-              지정합니다. 그리고 또한 그 쿠키는 1시간 후에 만료 되도록 지정합니다. </p>
-            <div class="w3-code w3-border   notranslate">
-              <div> &lt;?php<br>
-                setcookie("user", "Alex Porter", time()+3600);<br>
-                ?&gt;<br>
-                <br>
-                &lt;html&gt;<br>
-                ..... </div>
-            </div>
-            <p><b>Note: </b>쿠키의 값은 보낼 때 자동적으로 URLencoded 되고, 받을 때 자동적으로 decoded
-              됩니다. (URLencoding 을 피하려면, 대신에 setrawcookie() 를 사용합니다.).</p>
-            <h3>Example 2</h3>
-            <p>쿠키의 만료 시간을 다른 방법으로도 설정할 수 있습니다. 그것은 초(seconds)를 사용하는 것 보다 쉬울 수
-              있습니다.</p>
-            <div class="w3-code w3-border  notranslate">
-              <div> &lt;?php<br>
-                $expire=time()+60*60*24*30;<br>
-                setcookie("user", "Alex Porter", $expire);<br>
-                ?&gt;<br>
-                <br>
-                &lt;html&gt;<br>
-                ..... </div>
-            </div>
-            <p>위의 예에서 만료 시간을 한달로 설정합니다. (<i>60 sec * 60 min * 24 hours * 30 days</i>).</p>
-            <hr>
-            <h2>How to Retrieve a Cookie Value?</h2>
-            <p>PHP $_COOKIE 변수는 쿠키 값을 검색하는데 사용됩니다.&nbsp; <br>
-              <br>
-              아래의 예에서 "user" 라는 이름의 쿠키의 값을 가져다가 페이지에 표시합니다. :</p>
-            <div class="w3-code w3-border  notranslate">
-              <div> &lt;?php<br>
-                // Print a cookie<br>
-                echo $_COOKIE["user"];<br>
-                <br>
-                // A way to view all cookies<br>
-                print_r($_COOKIE);<br>
-                ?&gt; </div>
-            </div>
-            <p>다음 예에서는 쿠키가 설정되어 있는지 확인하기 위해서 isset() 함수를 사용합니다. :</p>
-            <div class="w3-code w3-border  notranslate">
-              <div> &lt;html&gt;<br>
-                &lt;body&gt;<br>
-                <br>
-                &lt;?php<br>
-                if (isset($_COOKIE["user"]))<br>
-                &nbsp;&nbsp;echo "Welcome " . $_COOKIE["user"] . "!&lt;br&gt;";<br>
-                else<br>
-                &nbsp;&nbsp;echo "Welcome guest!&lt;br&gt;";<br>
-                ?&gt;<br>
-                <br>
-                &lt;/body&gt;<br>
-                &lt;/html&gt; </div>
-            </div>
-            <br>
-            <hr>
-            <h2>How to Delete a Cookie?</h2>
-            <p>쿠키를 삭제할 때, 만료 날자가 과거인지를 확인해야 합니다.&nbsp;</p>
-            <p>Delete example:</p>
-            <div class="w3-code w3-border  notranslate">
-              <div> &lt;?php<br>
-                // set the expiration date to one hour ago<br>
-                setcookie("user", "", time()-3600);<br>
-                ?&gt; </div>
-            </div>
-            <br>
-            <hr>
-            <h2>What if a Browser Does NOT Support Cookies?</h2>
-            <p>응용 프로그램이 쿠키를 지원하지 않는 브라우져를 다루는 경우에는, 당신의 응용프로그램에서 한페이지에서 다른 페이지로
-              정보를 전달하는 다른 방법을 사용해야 합니다. 한가지 방법은 <strong>폼(forms)을 통한 데이타 전달</strong>입
-              니다.</p>
-            <p>아래의 폼은 사용자가 "Submit"&nbsp; 버튼을 클릭하면 사용자 입력을 "welcome.php"에 전달
-              합니다. :</p>
-            <div class="w3-code w3-border  notranslate">
-              <div> &lt;html&gt;<br>
-                &lt;body&gt;<br>
-                <br>
-                &lt;form action="welcome.php" method="post"&gt;<br>
-                Name: &lt;input type="text" name="name"&gt;<br>
-                Age: &lt;input type="text" name="age"&gt;<br>
-                &lt;input type="submit"&gt;<br>
-                &lt;/form&gt;<br>
-                <br>
-                &lt;/body&gt;<br>
-                &lt;/html&gt; </div>
-            </div>
-            <p>다음과 같이 "welcome.php" 파일에서 값을 회수합니다.:</p>
-            <div class="w3-code w3-border  notranslate">
-              <div> &lt;html&gt;<br>
-                &lt;body&gt;<br>
-                <br>
-                Welcome &lt;?php echo $_POST["name"]; ?&gt;.&lt;br&gt;<br>
-                You are &lt;?php echo $_POST["age"]; ?&gt; years old.<br>
-                <br>
-                &lt;/body&gt;<br>
-                &lt;/html&gt; </div>
-            </div>
-            <br>
+
             <hr>
             <h2>How to view the cookies on my computer?</h2>
             <ul>
-              <li><strong> Chrome:</strong> F12 → Resources → Cookies; <strong>Firefox:</strong>
-                F12 → Cookies </li>
+              <li><strong> Chrome:</strong> F12 → Application → Storage → Cookies; </li>
             </ul>
-            <hr>
-            <h2>Clearing cookies in your browser</h2>
-            <ul>
-              <li><strong>Chrome</strong>: Wrench Chrome wrench icon → History →
-                Clear all browsing data...</li>
-              <li><strong>Firefox</strong>: Firefox menu → Options → Privacy →
-                Show Cookies... → Remove (All) Cookies</li>
-            </ul>
-            <br>
-            <hr>
-            <h2>Examples</h2>
-            <p>counter example:</p>
-            <div class="w3-code w3-border  notranslate">
-              <div> &lt;!DOCTYPE html&gt;<br>
-                &lt;?php<br>
-                $expire = time()+3600;<br>
-                <br>
-                setcookie("user","Jun Ji",$expire);<br>
-                if( isset($_COOKIE["user"]) ) <br>
-                &nbsp;&nbsp; &nbsp;$user = $_COOKIE["user"];<br>
-                else <br>
-                &nbsp;&nbsp; &nbsp;$user = "guest";<br>
-                &nbsp;&nbsp; &nbsp;<br>
-                if ( !isset($_COOKIE['visits']) ) <br>
-                &nbsp;&nbsp; &nbsp;$visits = 0;<br>
-                else <br>
-                &nbsp;&nbsp; &nbsp;$visits = $_COOKIE['visits'] + 1;<br>
-                <br>
-                setcookie("visits", $visits, $expire);<br>
-                ?&gt;<br>
-                <br>
-                &lt;html&gt;<br>
-                &nbsp;&nbsp; &nbsp;&lt;body&gt;<br>
-                &nbsp;&nbsp; &nbsp;&lt;?php<br>
-                &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; echo "Welcome " . $user .
-                "!&lt;br&gt;";<br>
-                &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; if ( $visits &gt; 1)<br>
-                &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; echo
-                "You visited this site " . $visits . " times.";<br>
-                &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; else<br>
-                &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; echo
-                "Welcome to this site ! This is your first visit !";<br>
-                &nbsp;&nbsp; &nbsp;?&gt;<br>
-                &nbsp;&nbsp; &nbsp;&lt;/body&gt;<br>
-                &lt;/html&gt;</div>
-            </div>
             <br>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="24.%20File%20Upload.html">«
                 Previous</a> <a class="w3-right w3-btn" href="26.%20Sessions.html">Next »</a> </div>
