--- a/25. Cookies.html
+++ b/25. Cookies.html
@@ -22,6 +22,8 @@
               쿠키는 서버가 사용자의 컴퓨터에 삽입하는 작은 파일입니다.
               같은 컴퓨터가 브라우져로 페이지를 요청할 때마다, 쿠키도 함께 전송됩니다. 
               PHP를 사용하면 쿠키 값을 만들고 검색 할 수 있습니다. </p>
+            <strong>내 컴퓨터에서 쿠키 살펴보기</strong> <br>
+            <strong> Chrome:</strong> F12 → Application → Storage → Cookies;
             <p><img class="decoded" alt="http://courses.cs.washington.edu/courses/cse154/14sp/lectures/slides/images/cookie_exchange.png"
 
                 src="http://courses.cs.washington.edu/courses/cse154/14sp/lectures/slides/images/cookie_exchange.png"></p>
@@ -153,14 +155,8 @@
               <br>
               <a target="_blank" class="w3-btn w3-margin-bottom" href="https://tryphp.w3schools.com/showphp.php?filename=demo_cookie5">Run
                 example »</a> </div>
-            
-
-            <hr>
-            <h2>How to view the cookies on my computer?</h2>
-            <ul>
-              <li><strong> Chrome:</strong> F12 → Application → Storage → Cookies; </li>
-            </ul>
             <br>
+            
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="24.%20File%20Upload.html">«
                 Previous</a> <a class="w3-right w3-btn" href="26.%20Sessions.html">Next »</a> </div>
             <hr> </div>
