Update Ex-5. PHP Login Session.html

--- a/Ex-5. PHP Login Session.html
+++ b/Ex-5. PHP Login Session.html
@@ -187,6 +187,7 @@
             <div class="w3-code notranslate">
               <div> &lt;?php<br>
                 session_start();<br>
+                session_unset();<br>
                 session_destroy();<br>
                 header("Location: front.php");<br>
                 ?&gt;</div>
